src/styles/_academy.scss
.Academy {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  flex: 1 1 100%;
}

.pt-non-ideal-state {
  padding-top: 0.7rem;

  .pt-non-ideal-state-visual {
    margin-bottom: 0.5rem;
  }

  .pt-non-ideal-state-title {
    padding: 0.5rem 0 0 0;
  }
}

.assessment-briefing {
  padding-bottom: 0;
  .assessment-briefing-button {
    margin-top: 1rem;
  }
}

.Assessment {
  color: $cadet-color-3;

  .contentdisplay-content.pt-card {
    padding: 10px 20px 10px 20px;

    button.collapse-button {
      /* To override the center-xs center alignment */
      display: block;
      margin: 0 0 10px 0;
    }
  }

  .listing.pt-card {
    margin: 0 0 1rem 0;
  }

  .listing {
    background-color: $cadet-color-5;
    margin: 0px;
    padding: 0;
    text-align: justify;

    .listing-due-icon {
      vertical-align: baseline;
      margin-right: 0.4rem;
    }
  }

  .listing-picture {
    padding: 0;

    img {
      height: 100%;
      width: 100%;
      object-fit: cover;
    }

    img.cover-image-submitted {
      filter: gray; /* IE6-9 */
      -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
      filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
    }

    /* Disable grayscale on hover */
    img.cover-image-submitted:hover {
      -webkit-filter: grayscale(0);
      filter: none;
    }
  }

  .listing-text {
    padding: 0.5rem 1rem 0.5rem 1.5rem;
    border: 1rem;
    display: flex;
    flex-direction: column;
  }

  .listing-title {
    display: flex;
    margin-bottom: 2px;

    .pt-text-overflow-ellipsis {
      /* Pushes button to the right of container */
      flex-grow: 1;
      display: flex;
    }

    div {
      /* overwrite default padding */
      padding: 0;
      margin-bottom: 0.4rem;
    }

    .col-xs-2 {
      /* flush menu button, span.pt-popover-wrapper, to right */
      text-align: right;
    }

    h4 {
      margin: 4px 0 0 0;
    }
  }

  .listing-description {
    /* Pushes .listing-controls to the bottom of container */
    flex-grow: 1;
    /* Creates space between the description text, buttons and title */
    margin: 1rem 0rem 1rem 0rem;
  }

  .listing-controls {
    display: flex;

    .listing-due-date {
      /* Pushes button to the right of container */
      display: flex;
      flex-grow: 1;
      align-items: center;
      padding-top: 6px;
    }
  }
}

.betcha-dialog {
  span.warning {
    font-weight: bold;
    color: firebrick;
  }

  div.pt-dialog-body {
    margin: 15px 20px 15px 20px;
  }

  div.pt-dialog-footer {
    // align the div.pt-button-group right
    text-align: right;
  }
}

.WorkspaceParent {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.GradingEditor {
  .grading-editor-solution {
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-word;
  }
  .grading-editor-input-parent {
    /** Center the text for numeric input and showing grades. */
    table {
      border-spacing: 5px;
      width: 100%;
      tbody {
        text-align: center;
        button {
          width: 100%;
        }
        td {
          /** Aligns the numeric input */
          text-align: -webkit-center;
        }
      }
    }
    .grading-adjustment-input {
      width: 150px;
    }
  }
  .grading-editor-save-button {
    margin-top: 0.4rem;
    width: 100% !important;
  }
}

.Grading {
  /* To show the table borders that get cut out by a Card  */
  padding: 1px;

  /** 
   *  To prevent misalignment of column header and content 
   *  for large displays. This effectively flushes the content left.
   *  See https://github.com/source-academy/cadet-frontend/pull/148
   */
  .ag-body-container {
    display: block;
  }
  .ag-grid-export-button {
    margin-top: 20px;
  }
}

.ag-header-cell-label {
  justify-content: center;
  font-weight: bold;
  padding-left: 15px;
}

.ag-cell {
  padding-top: 4px;
  justify-content: center;
  text-align: center;
}

